# cuda_grid

./: .gitignore  CMakeLists.txt  README.md  logbook.md  mail_to_boyle.md  meson.build  notes  notes.txt  stencil_blas.json  stencil_blas.pickle
benchmark/: 9points_2dbtv2.cu  9points_blas.cu  9points_shmem.cu  analyze.ipynb  bench_params.h  copy_noMalloc.cu  copy_withMalloc.cu  matmul_blas.cu  matmul_lanes.cu  matmul_shmem.cu  mrhs_blas.cu  mrhs_lanes.cu  mrhs_sharedmem.cu  pyBenchmark.py  run.py  run_benchmark.py  stencil_blas.cu  stencil_lanes.cu
benchmark/.ipynb_checkpoints/: analyze-checkpoint.ipynb
cugrid/: benchmark.h  cugrid.h  datatypes.h  errorcheck.h  grid.h  lane.h  lattice.h  matmul.h  random.h  stencil.h  stopwatch.h  tensor.h
cugrid2/: bGrid.h  bLattice.h  bMatmul.h  bRandom.h  bStencil.h  bTensor.h  benchmark.h  blasWrapper.h  cugrid2.h  datatypes.h  errorcheck.h  stopwatch.h
runs/: pyBench.py  stencil_blas.out  stencil_lanes.out
runs/nine_point_stencil/: 2dbtv2.out  GeneralCoarsenedMatrixMultiRHS.h  analyze.html  analyze.ipynb  benchmark.html  blas.out  blas.out.old  grid.out  pyBench.py  pyBenchGrid.py
runs/nine_point_stencil/.ipynb_checkpoints/: analyze-checkpoint.ipynb
runs/single_point_stencil/: analyze.ipynb  matmul_blas.out  matmul_lanes.out  matmul_shmem.out
scripts/: bench_on_booster.sh  module_setup_booster.sh
test/: bench_matmul.cu  bench_matmul_mrhs.cu  bench_stencil.cu  bench_stencil_mrhs.cu  grid_mapping.cu  lattice_matmul.cu  lattice_mem.cu  matmul.cu  test1.cu  test_stencil.cu  vector_add.cu
test2/: complexStencil.cu  main2.cu  main2mrhs.cu  stencil2.cu  test_tensor.cu
